Name of method was changed.